@@ -1,3 +1,8 @@
+2010-01-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/42655
+	* g++.dg/overload/rvalue1.C: New.
+
 2010-01-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/42721
