@@ -1,3 +1,8 @@
+2010-01-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/42655
+	* call.c (convert_like_real): Do full decay_conversion for ck_rvalue.
+
 2009-12-22  Jason Merrill  <jason@redhat.com>
 
 	PR c++/42331
